@@ -107,7 +107,7 @@
 	  
 	  <tr>
 	    <td>Stable</td>
-	    <td>2.2.3</td>
+	    <td>2.2.4</td>
 	    <td>
 	      <a href="../doc/v2.2/Documentation/out-www/">Documentation</a>,
 	      <a href="download/#2.2">download</a>.
